[gd_scene load_steps=2 format=3 uid="uid://bs2jecgg0jb7s"]

[ext_resource type="Script" path="res://src/UI/MenuBar/Patterns/Scripts/view_panel.gd" id="1_sac38"]

[node name="ViewPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"PanelX"
script = ExtResource("1_sac38")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "KEY_SEARCH"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="PagesHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/PagesHBoxContainer"]
layout_mode = 2
text = "<"

[node name="PageLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/PagesHBoxContainer"]
layout_mode = 2

[node name="MaxPageLabel" type="Label" parent="MarginContainer/VBoxContainer/PagesHBoxContainer"]
layout_mode = 2
text = "/0"

[node name="FowardButton" type="Button" parent="MarginContainer/VBoxContainer/PagesHBoxContainer"]
layout_mode = 2
text = ">"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PagesHBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="text_submitted" from="MarginContainer/VBoxContainer/PagesHBoxContainer/PageLineEdit" to="." method="_on_page_line_edit_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PagesHBoxContainer/FowardButton" to="." method="_on_foward_button_pressed"]
